# Smartbroker

./: .env.example  .gitignore  BOT_XAUUSD_PRO.mq5  INSTALACION_BOT_XAUUSD_PRO.txt  README.md  README_TRADING_BOT.md  XAU_USD_MultiTrader_Pro_v5_3.mq5  config.yaml  install.ps1  install.sh  main.py  requirements.txt  run.bat  run.ps1  run.sh
api/: routes.py
app/: main.py
config/: constants.py  settings.py
database/: models.py
docs/: ARQUITECTURA_COMPLETA.md  PLAN_IMPLEMENTACION.md  RESUMEN_EJECUTIVO.md  adaptive_agent_signals.md  conexion_brokers_mt5.md  dashboard_operativo.md  (+4 more)
python/: pyproject.toml  requirements.txt
python/models/: adaptive_agent_state.json
python/src/agent/: adaptive_agent.py
python/src/app/: settings.py
python/src/broker/: mt5_connection.py  profile_loader.py  resilient_connection.py
python/src/dashboard/: app.py
python/src/data/: feature_store.py  market_regime.py  mt5_data_feed.py
python/src/execution/: planner.py
python/src/ml/: dataset.py  drift_detection.py  model_registry.py  predict.py  train.py
python/src/monitoring/: metrics.py
python/src/risk/: kill_switch.py  risk_limits.py
python/src/services/: api.py  ml_validation.py  runtime_state.py
python/src/signals/: processor.py  store.py
python/src/strategy/: portfolio_allocator.py
python/src/utils/: symbols.py
python/tests/: test_api_ml_validation.py  test_execution_plan.py  test_ml_pipeline.py  test_profile_loader.py  test_risk.py  test_settings.py  test_signal_agent_flow.py  test_strategy_runtime.py
python/tools/: bootstrap_project.py  self_test.py
(+30 files in other folders)
